fixed problem: footer font-size too big on mobile

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,5 +1,6 @@
 footer {
-    height: 15rem;
+    height: max-content;
+    padding: 1rem;
     background-color: rgb(29, 148, 191);
     display: flex;
     flex-direction: column;
@@ -10,13 +11,31 @@ footer {
 }
 
 footer h3 span {
-    font-size: 2rem;
+    font-size: 1rem;
     color: white;
     text-align: center;
     margin-bottom: 0;
 }
 
+footer h3 span br {
+    display: none;
+}
+
 footer p,
 footer i {
     color: rgb(235, 235, 235);
+    font-size: 0.8rem;
+}
+
+@media only screen and (min-width: 600px) {
+    footer h3 span {
+        font-size: 1.5rem;
+    }
+
+}
+
+@media only screen and (min-width: 750px) {
+    footer h3 span br {
+        display: initial;
+    }
 }
